--- a/index.html
+++ b/index.html
@@ -41,13 +41,33 @@
             <div class="img-discription">
                 <span style="text-decoration-line: underline; font-size: 17px;">A Designer who</span><br>
                 <span style="font-size: 50px; line-height: 1.2;">Judges a book <br>
-                    by its<span style="color: #7127BA;">  <div class="oval"></div>cover</span>...</span><br>
+                    by its<span style="color: #7127BA;">
+                        <div class="oval"></div>cover
+                    </span>...</span><br>
                 <span style="font-size: 11px;">Because if the cover does not impress you what else can?</span>
             </div>
         </div>
 
         <div class="para-1">
-            <p><span style="font-size: 50px;">I'm a Web Developer.</span><br>Currently, I'm a Web Developer at <span style="color: blue;">Facebook</span>,</p>
+            <p><span style="font-size: 50px;">I'm a Web Developer.</span><br>Currently, I'm a Web Developer at <span
+                    style="color: #1877F2;">Facebook</span>,</p>
+        </div>
+
+        <div class="para-2">A self-taught UI/UX designer, functioning in the industry for 3+ years now.
+            I make meaningful and delightful digital products that create an equilibrium
+            between user needs and business goals.</div>
+
+        <div class="work-details">Work Experience</div>
+        <div class="para-3">
+            I'm currently looking to join a cross-functional team
+            that values improving people's lives through accessible design
+        </div>
+        <div class="contact">
+            <span>Contact</span><br>
+            <p>I'm currently looking to join a cross-functional team that values improving people's lives
+                through accessible design. or have a project in mind? Let's connect.<br>
+
+                ibrhaimmemon930@gmail.com</p>
         </div>
     </main>
     <script src="js/script.js"></script>
