--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
             that values improving people's lives through accessible design
         </div>
         <div class="contact">
-            <span>Contact</span><br>
+            <span>Contact</span>
             <p>I'm currently looking to join a cross-functional team that values improving people's lives
-                through accessible design. or have a project in mind? Let's connect.<br>
+                through accessible design. or have a project in mind? Let's connect.<br><br>
 
                 ibrhaimmemon930@gmail.com</p>
         </div>
