--- a/index.html
+++ b/index.html
@@ -62,6 +62,20 @@
             I'm currently looking to join a cross-functional team
             that values improving people's lives through accessible design
         </div>
+
+        <div class="making-pic">
+            
+
+            <div class="glow-effect"></div>
+            <div class="circle"></div>
+            <div class="circle" id="circle-2"></div>
+            <div class="circle" id="circle-3"></div>
+            <div class="circle" id="circle-4"></div>
+            <div class="circle" id="circle-5"></div>
+            <img src="img/Avatar.png" alt="Logo">
+        </div>
+
+
         <div class="contact">
             <span>Contact</span>
             <p>I'm currently looking to join a cross-functional team that values improving people's lives
