--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav>
-            <a><img src="img/logo.png" alt="logo"></a>
+            <a><img src="img/IMG-20220530-WA0134_2.jpg" alt="logo"></a>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
