--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             fill="white" />
                     </svg>
                     <div class="name">
-                        <span>Hello! I Am </span><span style="color: #7127BA;">Ibrahim Memon</span>
+                        <span>Hello! I am </span><span style="color: #7127BA;">Saqib</span>
                     </div>
                 </div>
             </div>
@@ -44,13 +44,14 @@
                     by its<span style="color: #7127BA;">
                         <div class="oval"></div>cover
                     </span>...</span><br>
-                <span style="font-size: 11px;">Because if the cover does not impress you what else can?</span>
+                <span style="font-size: 14px;">Because if the cover does not impress you what else can?</span>
             </div>
         </div>
 
         <div class="para-1">
-            <p><span style="font-size: 50px;">I'm a Web Developer.</span><br>Currently, I'm a Web Developer at <span
-                    style="color: #1877F2;">Facebook</span>,</p>
+            <p><span style="font-size: 50px;">I'm a Web Developer.</span><br>Currently, I'm working at
+                <span style="color: #00b22d;">Fiverr</span>,
+            </p>
         </div>
 
         <div class="para-2">A self-taught UI/UX designer, functioning in the industry for 3+ years now.
@@ -64,7 +65,7 @@
         </div>
 
         <div class="making-pic">
-            
+
 
             <div class="glow-effect"></div>
             <div class="circle"></div>
