--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a><img src="img/IMG-20220530-WA0134_2.jpg" alt="logo"></a>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="#">Projects</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="img-discription">
-                <span style="text-decoration-line: underline; font-size: 17px;">A Designer who</span><br>
+                <span style="text-decoration-line: underline; font-size: 17px;">A Developer who</span><br>
                 <span style="font-size: 50px; line-height: 1.2;">Judges a book <br>
                     by its<span style="color: #7127BA;">
                         <div class="oval"></div>cover
@@ -54,17 +54,49 @@
             </p>
         </div>
 
-        <div class="para-2">A self-taught UI/UX designer, functioning in the industry for 3+ years now.
-            I make meaningful and delightful digital products that create an equilibrium
-            between user needs and business goals.</div>
+        <div class="para-2">I specialize in creating custom websites using HTML, CSS, and JavaScript. My process
+            involves working closely with you to understand your business, brand, and goals, and creating a website that
+            not only looks great but is also functional, user-friendly and responsive.</div>
 
         <div class="work-details">Work Experience</div>
-        <div class="para-3">
-            I'm currently looking to join a cross-functional team
-            that values improving people's lives through accessible design
-        </div>
+        <div class="experience">
+            <div class="para-3">
+                I'm currently working on Fiverr. I have worked on my own projects and some other projects for my firends
+                that you can see <a style="text-decoration: none;" href="/other-pages/project.html">Here</a>
+            </div>
 
-        <div class="making-pic">
+            <!-- Put this code anywhere in the body of your page where you want the badge to show up. -->
+
+            <div itemscope itemtype='http://schema.org/Person' class='fiverr-seller-widget'
+                style='display: inline-block;'>
+                <a itemprop='url' href=https://www.fiverr.com/saqib_nawaz01 rel="nofollow" target="_blank"
+                    style='display: inline-block;'>
+                    <div class='fiverr-seller-content'
+                        id='fiverr-seller-widget-content-c7d11315-55a8-4d21-b9f2-d73a2cb763b8' itemprop='contentURL'
+                        style='display: none;'></div>
+                    <div id='fiverr-widget-seller-data' style='display: none;'>
+                        <div itemprop='name'>saqib_nawaz01</div>
+                        <div itemscope itemtype='http://schema.org/Organization'><span itemprop='name'>Fiverr</span>
+                        </div>
+                        <div itemprop='jobtitle'>Seller</div>
+                        <div itemprop='description'>I am very interested in computers. This is the main motive force due
+                            to
+                            which I tend to learn skills related to it such as typing, 3d modeling, game development,
+                            and
+                            website development. Right now I am a beginner in coding but very good at typing. I have 2+
+                            years of experience in typing.</div>
+                    </div>
+                </a>
+            </div>
+
+            <script id='fiverr-seller-widget-script-c7d11315-55a8-4d21-b9f2-d73a2cb763b8'
+                src='https://widgets.fiverr.com/api/v1/seller/saqib_nawaz01?widget_id=c7d11315-55a8-4d21-b9f2-d73a2cb763b8'
+                data-config='{"category_name":"\n                                    Programming \u0026 Tech\n\n                            "}'
+                async='true' defer='true'></script>
+        </div>
+        <!-- end here -->
+
+        <!-- <div class="making-pic">
 
 
             <div class="glow-effect"></div>
@@ -74,17 +106,26 @@
             <div class="circle" id="circle-4"></div>
             <div class="circle" id="circle-5"></div>
             <img src="img/Avatar.png" alt="Logo">
-        </div>
+        </div> -->
+
 
 
         <div class="contact">
-            <span>Contact</span>
-            <p>I'm currently looking to join a cross-functional team that values improving people's lives
-                through accessible design. or have a project in mind? Let's connect.<br><br>
-
-                ibrhaimmemon930@gmail.com</p>
+            <span>Contact Me</span>
+            <p>Please don't hesitate to contact me any time.</p>
+            <div class="logos">
+                <a href="https://www.fiverr.com/share/pAR6Eo" target="_blank" rel="noopener noreferrer"><img
+                        src="img/icons/fiverr-logo.png" alt=""></a>
+                <a id="facebook-logo" href="https://www.facebook.com/msaqib.saqib.50364" target="_blank"
+                    rel="noopener noreferrer"><img src="img/icons/facebook-logo.png" alt=""></a>
+                <a href="https://www.linkedin.com/in/muhammad-saqib-nawaz-868871257/" target="_blank"
+                    rel="noopener noreferrer"><img src="img/icons/linkledn-logopng.png" alt=""></a>
+                <a href="mailto:muhammadsaqib8379@gmail.com" target="_blank" rel="noopener noreferrer"><img
+                        src="img/icons/email-logo.png" alt=""></a>
+            </div>
         </div>
     </main>
+
     <script src="js/script.js"></script>
 </body>
 
