--- a/index.html
+++ b/index.html
@@ -59,6 +59,42 @@
             not only looks great but is also functional, user-friendly and responsive.</div>
 
         <div class="work-details">Work Experience</div>
+        <div class="up">
+            <div class="card">
+                <img src="img/icons/Html logo.png" alt="">
+                <div class="details">
+                    <h3>HTML5:</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, magni magnam.</p>
+                    <button><a href="#">Learn More</a></button>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/icons/Css logo.png" alt="">
+                <div class="details">
+                    <h3>CSS3:</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, magni magnam.</p>
+                    <button><a href="#">Learn More</a></button>
+                </div>
+            </div>
+        </div>
+        <div class="dow">
+            <div class="card">
+                <img src="img/icons/javascript logo.png" alt="">
+                <div class="details">
+                    <h3>JAVASCRIPT:</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, magni magnam.</p>
+                    <button><a href="#">Learn More</a></button>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/icons/react logo.png" alt="">
+                <div class="details">
+                    <h3>REACT:</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, magni magnam.</p>
+                    <button><a href="#">Learn More</a></button>
+                </div>
+            </div>
+        </div>
         <div class="experience">
             <div class="para-3">
                 I'm currently working on Fiverr. I have worked on my own projects and some other projects for my firends
@@ -96,19 +132,13 @@
         </div>
         <!-- end here -->
 
-        <!-- <div class="making-pic">
-
-
-            <div class="glow-effect"></div>
-            <div class="circle"></div>
-            <div class="circle" id="circle-2"></div>
-            <div class="circle" id="circle-3"></div>
-            <div class="circle" id="circle-4"></div>
-            <div class="circle" id="circle-5"></div>
-            <img src="img/Avatar.png" alt="Logo">
+        <!-- <div class="project-container">
+            <h3>Featured Projects</h3>
+            <div class="project">
+                <h4>TicTacToe</h4>
+                <p>A game made for gun just for fun</p>
+            </div>
         </div> -->
-
-
 
         <div class="contact">
             <span>Contact Me</span>
