--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
         </div>
         <!-- end here -->
 
-        <!-- <div class="project-container">
+        <div class="project-container">
             <h3>Featured Projects</h3>
             <div class="project">
                 <h4>TicTacToe</h4>
                 <p>A game made for gun just for fun</p>
             </div>
-        </div> -->
+        </div>
 
         <div class="contact">
             <span>Contact Me</span>
