--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <a><img src="img/IMG-20220530-WA0134_2.jpg" alt="logo"></a>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a onclick="scrollIt('project-container')">Projects</a></li>
+                <li><a onclick="scrollIt('contact')">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -64,16 +64,19 @@
                 <img src="img/icons/Html logo.png" alt="">
                 <div class="details">
                     <h3>HTML5:</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, magni magnam.</p>
-                    <button><a href="#">Learn More</a></button>
+                    <p>I have solid understanding about HTML. I
+                        have created many projects using it some are mentioned <a
+                            onclick="scrollIt('project-container')">Here</a>.</p>
+                    <button><a href="https://html.com/">Learn More</a></button>
                 </div>
             </div>
             <div class="card">
                 <img src="img/icons/Css logo.png" alt="">
                 <div class="details">
                     <h3>CSS3:</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, magni magnam.</p>
-                    <button><a href="#">Learn More</a></button>
+                    <p>I have a great understanding of CSS, and am able to effectively style my HTML pages. Some
+                        projects that use it are mentioned <a onclick="scrollIt('project-container')">Here</a>.</p>
+                    <button><a href="https://web.dev/">Learn More</a></button>
                 </div>
             </div>
         </div>
@@ -82,16 +85,17 @@
                 <img src="img/icons/javascript logo.png" alt="">
                 <div class="details">
                     <h3>JAVASCRIPT:</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, magni magnam.</p>
-                    <button><a href="#">Learn More</a></button>
+                    <p>I have recently learned it but am able to develop dynamic and interactive web applications.
+                        Projects using it are mentioned <a onclick="scrollIt('project-container')">Here</a>.</p>
+                    <button><a href="https://www.javascript.com/">Learn More</a></button>
                 </div>
             </div>
             <div class="card">
                 <img src="img/icons/react logo.png" alt="">
                 <div class="details">
                     <h3>REACT:</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, magni magnam.</p>
-                    <button><a href="#">Learn More</a></button>
+                    <p>I am currently on my journey to learn it.</p>
+                    <button><a href="https://reactjs.org/">Learn More</a></button>
                 </div>
             </div>
         </div>
@@ -132,15 +136,29 @@
         </div>
         <!-- end here -->
 
-        <div class="project-container">
+        <div class="project-container" id="project-container">
             <h3>Featured Projects</h3>
-            <div class="project">
+            <div class="project" id="project-1">
                 <h4>TicTacToe</h4>
-                <p>A game made for gun just for fun</p>
+                <div class="pro-detail">
+                    <p>Just a simple game that I really was inspired as a kid. Other than making it fully functional i
+                        really paid attention to the look of it. Have a try.</p>
+                    <div class="shine"></div>
+                    <img src="img/TicTacToe pic.png" alt="">
+                </div>
+            </div>
+            <div class="project" id="project-2">
+                <h4>TicTacToe</h4>
+                <div class="pro-detail">
+                    <p>Just a simple game that I really was inspired as a kid. Other than making it fully functional i
+                        really paid attention to the look of it. Have a try.</p>
+                    <div class="shine"></div>
+                    <img src="img/TicTacToe pic.png" alt="">
+                </div>
             </div>
         </div>
 
-        <div class="contact">
+        <div class="contact" id="contact">
             <span>Contact Me</span>
             <p>Please don't hesitate to contact me any time.</p>
             <div class="logos">
