--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
         <div class="project-container" id="project-container">
             <h3>Featured Projects</h3>
-            <div class="project" id="project-1">
+            <div class="project">
                 <h4>TicTacToe</h4>
                 <div class="pro-detail">
                     <p>Just a simple game that I really was inspired as a kid. Other than making it fully functional i
@@ -147,13 +147,13 @@
                     <img src="img/TicTacToe pic.png" alt="">
                 </div>
             </div>
-            <div class="project" id="project-2">
+            <div class="project">
                 <h4>TicTacToe</h4>
-                <div class="pro-detail">
+                <div class="pro-detail" style="flex-direction: row-reverse;">
                     <p>Just a simple game that I really was inspired as a kid. Other than making it fully functional i
                         really paid attention to the look of it. Have a try.</p>
-                    <div class="shine"></div>
-                    <img src="img/TicTacToe pic.png" alt="">
+                    <div class="shine" style="right: 53%;"></div>
+                    <img style="right: -25px;" src="img/TicTacToe pic.png" alt="">
                 </div>
             </div>
         </div>
