--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="experience">
             <div class="para-3">
                 I'm currently working on Fiverr. I have worked on my own projects and some other projects for my firends
-                that you can see <a style="text-decoration: none;" href="/other-pages/project.html">Here</a>
+                that you can see <a onclick="scrollIt('project-container')">Here</a>.
             </div>
 
             <!-- Put this code anywhere in the body of your page where you want the badge to show up. -->
