--- a/index.html
+++ b/index.html
@@ -138,24 +138,59 @@
 
         <div class="project-container" id="project-container">
             <h3>Featured Projects</h3>
-            <div class="project">
-                <h4>TicTacToe</h4>
-                <div class="pro-detail">
-                    <p>Just a simple game that I really was inspired as a kid. Other than making it fully functional i
-                        really paid attention to the look of it. Have a try.</p>
-                    <div class="shine"></div>
-                    <img src="img/TicTacToe pic.png" alt="">
+            <a href="https://saqibsaqib123.github.io/TicTacToe/">
+                <div class="project">
+                    <h4>TicTacToe</h4>
+                    <div class="pro-detail">
+                        <p>Just a simple game that I really was inspired as a kid. Other than making it fully functional
+                            i
+                            really paid attention to the look of it. Have a try.</p>
+                        <div class="shine"></div>
+                        <img src="img/TicTacToe pic.png" alt="">
+                    </div>
                 </div>
-            </div>
-            <div class="project">
-                <h4>TicTacToe</h4>
-                <div class="pro-detail" style="flex-direction: row-reverse;">
-                    <p>Just a simple game that I really was inspired as a kid. Other than making it fully functional i
-                        really paid attention to the look of it. Have a try.</p>
-                    <div class="shine" style="right: 53%;"></div>
-                    <img style="right: -25px;" src="img/TicTacToe pic.png" alt="">
+            </a>
+
+            <a href="https://saqibsaqib123.github.io/Clock/">
+                <div class="project">
+                    <h4>Clock</h4>
+                    <div class="pro-detail" style="flex-direction: row-reverse;">
+                        <p>Just a simple game that I really was inspired as a kid. Other than making it fully functional
+                            i
+                            really paid attention to the look of it. Have a try.</p>
+                        <div class="shine" style="right: 53%;"></div>
+                        <img style="right: -25px; box-shadow: 4px -6px 20px 0px #0084ff;" src="img/Clock.png" alt="">
+                    </div>
                 </div>
-            </div>
+            </a>
+
+            <a href="https://saqibsaqib123.github.io/Quadratic-Equations/">
+                <div class="project">
+                    <h4>Quadartic Equation</h4>
+                    <div class="pro-detail">
+                        <p>Just a simple game that I really was inspired as a kid. Other than making it fully functional
+                            i
+                            really paid attention to the look of it. Have a try.</p>
+                        <div class="shine"></div>
+                        <img src="img/Quadratic Equ.png" alt="">
+                    </div>
+                </div>
+            </a>
+
+            <a href="https://saqibsaqib123.github.io/Touseef-Portfolio/">
+                <div class="project">
+                    <h4>Friend Portfolio</h4>
+                    <div class="pro-detail" style="flex-direction: row-reverse;">
+                        <p>Just a simple game that I really was inspired as a kid. Other than making it fully functional
+                            i
+                            really paid attention to the look of it. Have a try.</p>
+                        <div class="shine" style="right: 53%;"></div>
+                        <img style="right: -15px; box-shadow: 4px -6px 20px 0px #9e00ff;" src="img/Other-project.png"
+                            alt="">
+                    </div>
+                </div>
+            </a>
+
         </div>
 
         <div class="contact" id="contact">
