--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <a href="https://saqibsaqib123.github.io/Clock/">
                 <div class="project">
                     <h4>Clock</h4>
-                    <div class="pro-detail" style="flex-direction: row-reverse;">
+                    <div class="pro-detail grp-2">
                         <p>Just a simple game that I really was inspired as a kid. Other than making it fully functional
                             i
                             really paid attention to the look of it. Have a try.</p>
@@ -180,7 +180,7 @@
             <a href="https://saqibsaqib123.github.io/Touseef-Portfolio/">
                 <div class="project">
                     <h4>Friend Portfolio</h4>
-                    <div class="pro-detail" style="flex-direction: row-reverse;">
+                    <div class="pro-detail grp-2">
                         <p>Just a simple game that I really was inspired as a kid. Other than making it fully functional
                             i
                             really paid attention to the look of it. Have a try.</p>
