--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <div class="para-1">
             <p><span style="font-size: 50px;">I'm a Web Developer.</span><br>Currently, I'm working at
-                <span style="color: #00b22d;">Fiverr</span>,
+                <a href="https://www.fiverr.com/share/pAR6Eo" target="_blank" style="color: #00b22d;">Fiverr</a>,
             </p>
         </div>
 
@@ -67,16 +67,17 @@
                     <p>I have solid understanding about HTML. I
                         have created many projects using it some are mentioned <a
                             onclick="scrollIt('project-container')">Here</a>.</p>
-                    <button><a href="https://html.com/">Learn More</a></button>
+                    <button><a target="_blank" href="https://html.com/">Learn More</a></button>
                 </div>
             </div>
+
             <div class="card">
                 <img src="img/icons/Css logo.png" alt="">
                 <div class="details">
                     <h3>CSS3:</h3>
                     <p>I have a great understanding of CSS, and am able to effectively style my HTML pages. Some
                         projects that use it are mentioned <a onclick="scrollIt('project-container')">Here</a>.</p>
-                    <button><a href="https://web.dev/">Learn More</a></button>
+                    <button><a target="_blank" href="https://web.dev/">Learn More</a></button>
                 </div>
             </div>
         </div>
@@ -87,21 +88,24 @@
                     <h3>JAVASCRIPT:</h3>
                     <p>I have recently learned it but am able to develop dynamic and interactive web applications.
                         Projects using it are mentioned <a onclick="scrollIt('project-container')">Here</a>.</p>
-                    <button><a href="https://www.javascript.com/">Learn More</a></button>
+                    <button><a target="_blank" href="https://www.javascript.com/">Learn More</a></button>
                 </div>
             </div>
+
             <div class="card">
                 <img src="img/icons/react logo.png" alt="">
                 <div class="details">
                     <h3>REACT:</h3>
                     <p>I am currently on my journey to learn it.</p>
-                    <button><a href="https://reactjs.org/">Learn More</a></button>
+                    <button><a target="_blank" href="https://reactjs.org/">Learn More</a></button>
                 </div>
             </div>
         </div>
         <div class="experience">
             <div class="para-3">
-                I'm currently working on Fiverr. I have worked on my own projects and some other projects for my firends
+                I'm currently working on <a href="https://www.fiverr.com/share/pAR6Eo" target="_blank"
+                    style="color: #00b22d;">Fiverr</a>. I have worked on my own projects and some other projects for my
+                firends
                 that you can see <a onclick="scrollIt('project-container')">Here</a>.
             </div>
 
@@ -138,53 +142,53 @@
 
         <div class="project-container" id="project-container">
             <h3>Featured Projects</h3>
-            <a href="https://saqibsaqib123.github.io/TicTacToe/">
+            <a target="_blank" href="https://saqibsaqib123.github.io/TicTacToe/">
                 <div class="project">
                     <h4>TicTacToe</h4>
                     <div class="pro-detail">
                         <p>Just a simple game that I really was inspired as a kid. Other than making it fully functional
                             i
                             really paid attention to the look of it. Have a try.</p>
-                        <div class="shine"></div>
+                        <!-- <div class="shine"></div> -->
                         <img src="img/TicTacToe pic.png" alt="">
                     </div>
                 </div>
             </a>
 
-            <a href="https://saqibsaqib123.github.io/Clock/">
+            <a target="_blank" href="https://saqibsaqib123.github.io/Clock/">
                 <div class="project">
                     <h4>Clock</h4>
                     <div class="pro-detail grp-2">
                         <p>Just a simple game that I really was inspired as a kid. Other than making it fully functional
                             i
                             really paid attention to the look of it. Have a try.</p>
-                        <div class="shine" style="right: 53%;"></div>
-                        <img style="right: -25px; box-shadow: 4px -6px 20px 0px #0084ff;" src="img/Clock.png" alt="">
+                        <!-- <div class="shine" style="right: 53%;"></div> -->
+                        <img style="right: -15px; box-shadow: 4px -6px 20px 0px #0084ff;" src="img/Clock.png" alt="">
                     </div>
                 </div>
             </a>
 
-            <a href="https://saqibsaqib123.github.io/Quadratic-Equations/">
+            <a target="_blank" href="https://saqibsaqib123.github.io/Quadratic-Equations/">
                 <div class="project">
                     <h4>Quadartic Equation</h4>
                     <div class="pro-detail">
                         <p>Just a simple game that I really was inspired as a kid. Other than making it fully functional
                             i
                             really paid attention to the look of it. Have a try.</p>
-                        <div class="shine"></div>
+                        <!-- <div class="shine"></div> -->
                         <img src="img/Quadratic Equ.png" alt="">
                     </div>
                 </div>
             </a>
 
-            <a href="https://saqibsaqib123.github.io/Touseef-Portfolio/">
+            <a target="_blank" href="https://saqibsaqib123.github.io/Touseef-Portfolio/">
                 <div class="project">
                     <h4>Friend Portfolio</h4>
                     <div class="pro-detail grp-2">
                         <p>Just a simple game that I really was inspired as a kid. Other than making it fully functional
                             i
                             really paid attention to the look of it. Have a try.</p>
-                        <div class="shine" style="right: 53%;"></div>
+                        <!-- <div class="shine" style="right: 53%;"></div> -->
                         <img style="right: -15px; box-shadow: 4px -6px 20px 0px #9e00ff;" src="img/Other-project.png"
                             alt="">
                     </div>
