--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
             </div>
             <div class="img-discription">
                 <span style="text-decoration-line: underline; font-size: 17px;">A Developer who</span><br>
-                <span style="font-size: 50px; line-height: 1.2;">Judges a book <br>
+                
+                <span class="head-cover">Judges a book <br>
                     by its<span style="color: #7127BA;">
                         <div class="oval"></div>cover
                     </span>...</span><br>
@@ -189,7 +190,7 @@
                             i
                             really paid attention to the look of it. Have a try.</p>
                         <!-- <div class="shine" style="right: 53%;"></div> -->
-                        <img style="right: -15px; box-shadow: 4px -6px 20px 0px #9e00ff;" src="img/Other-project.png"
+                        <img style="right: -15px; box-shadow: 4px -6px 20px 0px #9e00ff;" src="img/Friend-project.png"
                             alt="">
                     </div>
                 </div>
