--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <img src="img/icons/react logo.png" alt="">
                 <div class="details">
                     <h3>REACT:</h3>
-                    <p>I am currently on my journey to learn it.</p>
+                    <p>I am currently on my journey to master it.</p>
                     <button><a target="_blank" href="https://reactjs.org/">Learn More</a></button>
                 </div>
             </div>
@@ -105,9 +105,9 @@
         <div class="experience">
             <div class="para-3">
                 I'm currently working on <a href="https://www.fiverr.com/share/pAR6Eo" target="_blank"
-                    style="color: #00b22d;">Fiverr</a>. I have worked on my own projects and some other projects for my
-                firends
-                that you can see <a onclick="scrollIt('project-container')">Here</a>.
+                    style="color: #00b22d;">Fiverr</a>. I have created many projects of my own and some projects for my
+                firends.
+                Some are mentioned <a onclick="scrollIt('project-container')">Here</a>. 
             </div>
 
             <!-- Put this code anywhere in the body of your page where you want the badge to show up. -->
