--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
             <div class="img-discription">
                 <span style="text-decoration-line: underline; font-size: 17px;">A Developer who</span><br>
-                
+
                 <span class="head-cover">Judges a book <br>
                     by its<span style="color: #7127BA;">
                         <div class="oval"></div>cover
@@ -107,7 +107,7 @@
                 I'm currently working on <a href="https://www.fiverr.com/share/pAR6Eo" target="_blank"
                     style="color: #00b22d;">Fiverr</a>. I have created many projects of my own and some projects for my
                 firends.
-                Some are mentioned <a onclick="scrollIt('project-container')">Here</a>. 
+                Some are mentioned <a onclick="scrollIt('project-container')">Here</a>.
             </div>
 
             <!-- Put this code anywhere in the body of your page where you want the badge to show up. -->
@@ -160,9 +160,7 @@
                 <div class="project">
                     <h4>Clock</h4>
                     <div class="pro-detail grp-2">
-                        <p>Just a simple game that I really was inspired as a kid. Other than making it fully functional
-                            i
-                            really paid attention to the look of it. Have a try.</p>
+                        <p>An analogue clock that shows current time. It can also be converted to digital clock.</p>
                         <!-- <div class="shine" style="right: 53%;"></div> -->
                         <img style="right: -15px; box-shadow: 4px -6px 20px 0px #0084ff;" src="img/Clock.png" alt="">
                     </div>
@@ -173,9 +171,7 @@
                 <div class="project">
                     <h4>Quadartic Equation</h4>
                     <div class="pro-detail">
-                        <p>Just a simple game that I really was inspired as a kid. Other than making it fully functional
-                            i
-                            really paid attention to the look of it. Have a try.</p>
+                        <p>This was my dream to make an Quadartic Calculator so I gave it a try. It is not full ready and is in development will be ready soon.</p>
                         <!-- <div class="shine"></div> -->
                         <img src="img/Quadratic Equ.png" alt="">
                     </div>
@@ -186,9 +182,7 @@
                 <div class="project">
                     <h4>Friend Portfolio</h4>
                     <div class="pro-detail grp-2">
-                        <p>Just a simple game that I really was inspired as a kid. Other than making it fully functional
-                            i
-                            really paid attention to the look of it. Have a try.</p>
+                        <p>My friend who is a Game Developer asked me to make a Portfolio of his own to showcase his projects and skills.</p>
                         <!-- <div class="shine" style="right: 53%;"></div> -->
                         <img style="right: -15px; box-shadow: 4px -6px 20px 0px #9e00ff;" src="img/Friend-project.png"
                             alt="">
@@ -200,7 +194,7 @@
 
         <div class="contact" id="contact">
             <span>Contact Me</span>
-            <p>Please don't hesitate to contact me any time.</p>
+            <p>If you want to discuss any thing related to web development dont't hesitate to contact me.</p>
             <div class="logos">
                 <a href="https://www.fiverr.com/share/pAR6Eo" target="_blank" rel="noopener noreferrer"><img
                         src="img/icons/fiverr-logo.png" alt=""></a>
