--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
         </div>
 
         <div class="para-1">
-            <p><span style="font-size: 50px;">I'm a Web Developer.</span><br>Currently, I'm working at
+            <p><span style="font-size: 50px;
+                line-height: 46px;">I'm a Web Developer.</span><br>Currently, I'm working at
                 <a href="https://www.fiverr.com/share/pAR6Eo" target="_blank" style="color: #00b22d;">Fiverr</a>,
             </p>
         </div>
@@ -171,7 +172,8 @@
                 <div class="project">
                     <h4>Quadartic Equation</h4>
                     <div class="pro-detail">
-                        <p>This was my dream to make an Quadartic Calculator so I gave it a try. It is not full ready and is in development will be ready soon.</p>
+                        <p>This was my dream to make an Quadartic Calculator so I gave it a try. It is not full ready
+                            and is in development will be ready soon.</p>
                         <!-- <div class="shine"></div> -->
                         <img src="img/Quadratic Equ.png" alt="">
                     </div>
@@ -182,7 +184,8 @@
                 <div class="project">
                     <h4>Friend Portfolio</h4>
                     <div class="pro-detail grp-2">
-                        <p>My friend who is a Game Developer asked me to make a Portfolio of his own to showcase his projects and skills.</p>
+                        <p>My friend who is a Game Developer asked me to make a Portfolio of his own to showcase his
+                            projects and skills.</p>
                         <!-- <div class="shine" style="right: 53%;"></div> -->
                         <img style="right: -15px; box-shadow: 4px -6px 20px 0px #9e00ff;" src="img/Friend-project.png"
                             alt="">
