--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 
 <head>
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/Favicon">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/Favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/Favicon/favicon-16x16.png">
+    <link rel="manifest" href="./img/Favicon/site.webmanifest">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -98,7 +102,8 @@
                 <img src="img/icons/react logo.png" alt="">
                 <div class="details">
                     <h3>REACT:</h3>
-                    <p>I am currently on my journey to master it.</p>
+                    <p>I have just learned React and can create functional based Components with no problem. Some
+                        projects that use it are mentioned <a onclick="scrollIt('project-container')">Here</a>.</p>
                     <button><a target="_blank" href="https://reactjs.org/">Learn More</a></button>
                 </div>
             </div>
@@ -180,7 +185,7 @@
                 </div>
             </a>
 
-            <a target="_blank" href="https://saqibsaqib123.github.io/Touseef-Portfolio/">
+            <a target="_blank" href="https://mtouseef-portfolio.netlify.app/">
                 <div class="project">
                     <h4>Friend Portfolio</h4>
                     <div class="pro-detail grp-2">
