--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
         <div class="project-container" id="project-container">
             <h3>Featured Projects</h3>
-            <a target="_blank" href="https://saqibsaqib123.github.io/TicTacToe/">
+            <a target="_blank" href="https://msntictactoe.netlify.app/">
                 <div class="project">
                     <h4>TicTacToe</h4>
                     <div class="pro-detail">
