--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Saqib-Portfolio</title>
+  <title>Saqib Portfolio</title>
 </head>
 
 <body>
